fix text color issue

--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -123,6 +123,9 @@ body[data-theme="dark"] {
     .skills-tile {
       background-color: transparentize(#F8F5F4, 0.95);
     }
+    .section-title {
+      color: white !important;
+    }
   }
   #footer {
     background: #1F1F1F;
