--- a/src/App.scss
+++ b/src/App.scss
@@ -247,7 +247,7 @@ header {
     // background-color: transparentize(#F8F5F4, 0.95);
     background-color: transparentize(#020202, 0.95);
     padding: 10px 10px 5px 10px;
-    width: 90px;
+    min-width: 90px;
     margin: 5px 0 5px 0;
     border-radius: 8px;
   }
