--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -48,7 +48,7 @@ body[data-theme="dark"] {
       color: white;
     }
 
-    .polaroid span {
+    .polaroid {
       background: #6d6d6d;
     }
 
